objects/LBI__LatticeFieldMapping__c.object
<CustomObject>
    <fields>
        <fullName>LBI__DefaultValue__c</fullName>
        <label>Default Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI__IsDefault__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Default Mapping</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LBI__IsRequiredField__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Required Field</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LBI__LatticeWorkflowSetting__c</fullName>
        <label>Lattice Workflow Setting</label>
        <referenceTo>LBI__LatticeWorkflowSetting__c</referenceTo>
        <relationshipLabel>Lattice Field Mappings</relationshipLabel>
        <relationshipName>LatticeFieldMappings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LBI__SourceFieldName__c</fullName>
        <label>Source Field Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI__SourceObject__c</fullName>
        <label>Source Object</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Recommendation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LBI__TargetField__c</fullName>
        <label>Target Field</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI__TargetObject__c</fullName>
        <label>Target Object</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Opportunity</fullName>
                    <default>true</default>
                    <label>Opportunity</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Lattice Field Mapping</label>
    <nameField>
        <displayFormat>LFM-{000000}</displayFormat>
        <label>Lattice Field Mapping Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lattice Field Mappings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>